# wasm-mods

./: .gitignore  Cargo.toml  README.md  build.rs
crates/: Cargo.toml
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/mod-macros/: Cargo.toml
crates/mod-macros/src/: lib.rs
crates/mod-manager/: Cargo.toml
crates/mod-manager/src/: lib.rs  loader.rs  registry.rs
crates/mod_macros/: Cargo.toml
crates/mod_macros/src/: lib.rs
crates/mod_manager/: Cargo.toml
crates/mod_manager/src/: callback.rs  lib.rs  loader.rs  mod_context.rs  registry.rs  storage.rs
crates/mod_manager/src/funcs/: graphics.rs  input.rs  mod.rs  storage.rs  util_funcs.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs  macros.rs  traits.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
mods/: Cargo.toml
mods/example_mod/: Cargo.toml  build.sh  mod.wasm
mods/example_mod/src/: lib.rs
mods/template/: Cargo.toml
mods/template/src/: lib.rs
mods/template_mod/: Cargo.toml
mods/template_mod/src/: lib.rs
src/: lib.rs  main.rs
wit/: host.wit  module.wit
