[workspace]
resolver = "2"
members = [
    "crates/mod-manager",
]
exclude = [
    "mods",
]

[workspace.dependencies]
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
anyhow = "1.0.75"
notify = "8.0.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
wasm_component_layer = "0.1.16"
wasmi_runtime_layer = "0.31.0"

[package]
name = "wasmtime_mods"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
mod-manager = { path = "crates/mod-manager" }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[profile.release]
opt-level = 3
lto = true

[profile.dev.package."*"]
opt-level = 1
