[workspace]
resolver = "2"
members = [
    "crates/mod_manager", "crates/mod_macros",
]
exclude = [
    "mods",
]

[workspace.dependencies]
anyhow = "1.0.75"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
wasm_component_layer = "0.1.16"
wasmi_runtime_layer = "0.31.0"

[package]
name = "wasmtime_mods"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
mod_manager = { path = "crates/mod_manager" }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[profile.release]
opt-level = 3
lto = true

[profile.dev.package."*"]
opt-level = 1
