[workspace]
resolver = "2"
members = [
    "crates/mod_manager",
    "crates/mod_macros",
    "crates/utils",
    "crates/types",
]
exclude = [
    "mods",
]

[workspace.dependencies]
anyhow = "1.0.75"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
wasm_component_layer = "0.1.16"
wasmi_runtime_layer = "0.31.0"
proc-macro2 = "1.0.94"
quote = "1.0.40"
syn = "2.0.100"
rmp-serde = "1.3.0"
serde = { version = "1.0.219", features = ["derive"] }

[package]
name = "wasmtime_mods"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
mod_manager = { path = "crates/mod_manager" }
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[profile.release]
opt-level = 3
lto = true

[profile.dev.package."*"]
opt-level = 1
