[workspace]
resolver = "2"
members = [
    "common",
    "mod-manager",
    "mod-macros"
]

[workspace.dependencies]
serde = { version = "1.0.193", features = ["derive"], workspace = true }
serde_json = { version = "1.0.108", workspace = true }
wasm-bindgen = { version = "0.2.89", workspace = true }
tracing = { version = "0.1.41", workspace = true }
anyhow = { version="1.0.75", workspace = true }
notify = { version = "8.0.0", workspace = true }
