[workspace]
resolver = "2"
members = [
    "common",
    "mod-manager"
]

[workspace.dependencies]
serde = { version = "1.0.193", features = ["derive"], workspace = true }
serde_json = { version = "1.0.108", workspace = true }
tracing = { version = "0.1.41", workspace = true }
anyhow = { version="1.0.75", workspace = true }
notify = { version = "8.0.0", workspace = true }
wasm_component_layer = { version = "0.1.16", workspace = true }
wasmi_runtime_layer = { version = "0.31.0", workspace = true }
