[package]
name = "mod-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
notify = { workspace = true }
wasm_component_layer = "0.1.16"
wasmi_runtime_layer = "0.31.0"
