[package]
name = "mod-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
notify = { workspace = true }
wasm_component_layer = { workspace = true }
wasmi_runtime_layer = { workspace = true }
